--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Bonus Calculator Object Challenge</h1>
+      <button id="buttonGo">Calculate Bonus</button>
+    <div id="outputDiv">
+      <ul id="listDiv">
+      </ul>
+    </div>
   </body>
 </html>
